RESOLVED FIXED43555
Can't scroll on Bugzilla patch review pages on Mac with WebKit2
https://bugs.webkit.org/show_bug.cgi?id=43555
Summary Can't scroll on Bugzilla patch review pages on Mac with WebKit2
Adam Roben (:aroben)
Reported 2010-08-05 05:54:36 PDT
To reproduce: 1. Using a WebKit2 browser (like MiniBrowser), go to https://bugs.webkit.org/attachment.cgi?id=63527&action=review 2. Try to scroll either of the scrollable areas No scrolling happens! It doesn't matter if you use the mouse wheel/trackpad or use the scrollbar manually.
Attachments
Patch (4.05 KB, patch)
2010-09-13 18:48 PDT, Sam Weinig
andersca: review+
Adam Roben (:aroben)
Comment 1 2010-08-05 05:57:49 PDT
Scrolling works fine with WebKit2 on Windows.
Adam Roben (:aroben)
Comment 2 2010-08-05 05:58:20 PDT
Sam Weinig
Comment 3 2010-09-13 18:48:25 PDT
Eric Seidel (no email)
Comment 4 2010-09-13 18:59:32 PDT
Sam Weinig
Comment 5 2010-09-13 19:03:46 PDT
Fixed in r67430.
Note You need to log in before you can comment on or make changes to this bug.