Can't scroll on Bugzilla patch review pages on Mac with WebKit2 https://bugs.webkit.org/show_bug.cgi?id=43555

Reviewed by Anders Carlsson.

<rdar://problem/8421386> WebKit2: gmail.com is completely unresponsive to clicks
<rdar://problem/8276298> Can't scroll on Bugzilla patch review pages on Mac with WebKit2 (43555)

* page/mac/EventHandlerMac.mm:
(WebCore::EventHandler::passWheelEventToWidget):
(WebCore::frameHasPlatformWidget):
(WebCore::EventHandler::passMousePressEventToSubframe):
(WebCore::EventHandler::passMouseMoveEventToSubframe):
(WebCore::EventHandler::passMouseReleaseEventToSubframe):
Add WebKit2 mode for these functions based on the presence of a platform widget for a
FrameView.



Canonical link: https://commits.webkit.org/58161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67430 268f45cc-cd09-0410-ab3c-d52691b4dbfc